--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                 <h3>Top Articles</h3>
             </div> 
             <div class="col-sm-12 resultsArea">
+            	<div class="article-content">
+            		<p class="article-title">Article</p>
+            		<p class="author">Author</p>
+            		<p class="section">Section</p>
+            		<p class="date">Date</p>
+            		<p class="url">URL</p>
             </div>
            </div>      
     </div>
