--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>NY Times Search</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+    
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="app.js"></script>
 </head>
 
 <body>
@@ -41,18 +44,11 @@
             <div class="col-sm-12 articleHeader">
                 <h3>Top Articles</h3>
             </div> 
-            <div class="col-sm-12 resultsArea">
-            	<div class="article-content">
-            		<p class="article-title">Article</p>
-            		<p class="author">Author</p>
-            		<p class="section">Section</p>
-            		<p class="date">Date</p>
-            		<p class="url">URL</p>
-            </div>
+           
            </div>      
     </div>
 
-<script type="text/javascript">
+<!--<script type="text/javascript">
 	$("#search-btn").on("click", function (event) {
 		event.preventDefault();
 		getResults();
@@ -61,7 +57,7 @@
 		event.preventDefault();
 		$(".form-control").empty();
 	});
-</script>
+</script>-->
 </body>
 
 </html>
